# cotton-heroicons

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: maintenance.yml
cotton_heroicons/: apps.py
cotton_heroicons/templates/cotton/heroicon/: academic_cap.html  adjustments_horizontal.html  adjustments_vertical.html  archive_box.html  archive_box_arrow_down.html  archive_box_x_mark.html  arrow_down.html  arrow_down_circle.html  arrow_down_left.html  arrow_down_on_square.html  arrow_down_on_square_stack.html  arrow_down_right.html  arrow_down_tray.html  arrow_left.html  arrow_left_circle.html  arrow_left_end_on_rectangle.html  arrow_left_on_rectangle.html  arrow_left_start_on_rectangle.html  arrow_long_down.html  arrow_long_left.html  arrow_long_right.html  arrow_long_up.html  arrow_path.html  arrow_path_rounded_square.html  arrow_right.html  arrow_right_circle.html  arrow_right_end_on_rectangle.html  arrow_right_on_rectangle.html  arrow_right_start_on_rectangle.html  arrow_small_down.html  arrow_small_left.html  arrow_small_right.html  arrow_small_up.html  arrow_top_right_on_square.html  arrow_trending_down.html  arrow_trending_up.html  arrow_turn_down_left.html  arrow_turn_down_right.html  arrow_turn_left_down.html  arrow_turn_left_up.html  (+284 more)
django_heroicons/: apps.py
django_heroicons/templates/cotton/heroicon/: arrow_down_circle.html  arrow_down_left.html  arrow_down_on_square.html  arrow_down_on_square_stack.html  arrow_down_tray.html  arrow_left_circle.html  arrow_left_end_on_rectangle.html  arrow_left_start_on_rectangle.html  arrow_long_left.html  arrow_path.html  arrow_right.html  arrow_right_circle.html  arrow_right_end_on_rectangle.html  arrow_right_start_on_rectangle.html  arrow_trending_down.html  arrow_trending_up.html  arrow_turn_down_left.html  arrow_turn_right_down.html  arrow_turn_right_up.html  arrow_up_circle.html  arrow_up_left.html  arrow_up_on_square.html  arrow_up_right.html  arrow_uturn_down.html  arrows_pointing_in.html  arrows_pointing_out.html  arrows_up_down.html  at_symbol.html  backspace.html  backward.html  banknotes.html  bars_2.html  bars_3_center_left.html  bars_4.html  bars_arrow_down.html  beaker.html  bell_snooze.html  bold.html  bolt.html  bolt_slash.html  (+112 more)
example-project/: manage.py
example-project/example/: settings.py  urls.py
example-project/example/templates/: index.html
scripts/: icon_template.html  index_template.html  populate_icons.py  populate_index.py
