[project]
name = "cotton-heroicons"
version = "0.1.0"
description = "A Django Cotton Component Library of Heroicons"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"
keywords = ["django", "heroicons", "cotton", "component", "library"]
homepage = "https://github.com/snopoke/cotton-heroicons"
dependencies = [
    "django-cotton>=1.2.1",
    "django>=4.2,<5.2",
]

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = [
  "/cotton_heroicons",
]
